fix: month/week view events and grid misaligned

--- a/src/sass/month.scss
+++ b/src/sass/month.scss
@@ -26,6 +26,7 @@
   height: auto;
   line-height: normal;
   color: $event-bg;
+
   &:hover,
   &:focus {
     color: darken($event-bg, 10%);
@@ -60,7 +61,7 @@
 
   height: 100%; // ie-fix
 
-  & + & {
+  &+& {
     border-top: 1px solid $cell-border;
   }
 }
@@ -75,7 +76,8 @@
     font-weight: bold;
   }
 
-  > a {
+  >a {
+
     &,
     &:active,
     &:visited {
@@ -91,17 +93,16 @@
   flex-direction: row;
   flex: 1 0 0;
   overflow: hidden;
-  right: 1px;
 }
 
 .rbc-day-bg {
   flex: 1 0 0%;
 
-  & + & {
+  &+& {
     border-left: 1px solid $cell-border;
   }
 
-  .rbc-rtl & + & {
+  .rbc-rtl &+& {
     border-left-width: 0;
     border-right: 1px solid $cell-border;
   }
@@ -115,7 +116,7 @@
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.25);
   padding: 10px;
 
-  > * + * {
+  >*+* {
     margin-top: 1px;
   }
 }
